fixcss): Hide overflow

--- a/css/screens/background.css
+++ b/css/screens/background.css
@@ -7,6 +7,7 @@
   -webkit-background-size: cover;
   color: var(--white);
   height: 100%;
+  overflow: hidden;
 }
 
 .background__darkner {
@@ -38,20 +39,15 @@ main .background__calendar {
 }
 
 main .background__clock .clock__numbers {
-  font-size: 7.5rem;
+  font-size: 9rem;
   font-weight: bold;
+  margin-right: 0.1em;
 }
 
 main .background__clock .clock__am-pm {
-  font-size: 2rem;
+  font-size: 3.5rem;
 }
 
 main .background__greeting {
   font-size: 1.5rem;
-}
-
-@media screen and (max-width: 200px) {
-  main {
-    display: none;
-  }
 }
